refactor and purge refund type enum from payment